@@ -1,3 +1,11 @@
+2005-08-19  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	* src/yelp-toc-pager.c:
+	* src/yelp-window.c:
+	* src/yelp-xslt-pager.c:
+	- Patch from Don Scorgie to fix crash, #172227
+
 2005-07-25  Ross Burton  <ross@burtonini.com>
 
 	* src/yelp-db-pager.c:
